examples/typeError/typeErrorInCopatternDest3.lcp
Nat = Data(X)< Zero () | Succ X >
NatList = Record(X){ .head : Nat | .tail : X }

f : NatList
.tail (.jeje f)  = 1
